[package]
name = "parity-db"
version = "0.4.13"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/parity-db/"
description = "Key-value database for the blockchain"

[features]
instrumentation = []
bench = []

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
fdlimit = "0.2.1"
rand = { version = "0.8.2", features = ["small_rng"] }
tempfile = "3.2"

[profile.release]
panic = "abort"
#codegen-units = 1
#lto = "fat"
debug = true

[workspace]
members = [
	".",
	"admin",
]
